hook up server database, add/retrieve User
