# eBirdAlert/Server/Sources/BirdService/ServiceHandler.swift
@@ -2,6 +2,8 @@
 // Copyright (C) 2026 Colin Rafferty <colin@rafferty.net>
 
 import AlertAPI
+import FluentKit
+import Vapor
 
 extension Components.Schemas.Range {
     func dump() {
@@ -15,6 +17,40 @@ extension Components.Schemas.Range {
 }
 
 struct ServiceHandler: APIProtocol {
+    let app: Vapor.Application
+
+    func newUser(_ input: Operations.NewUser.Input) async throws
+        -> Operations.NewUser.Output
+    {
+        guard case let .json(req) = input.body else {
+            return .conflict // TODO: this should be better
+        }
+        do {
+            let user = User(name: req.name)
+            try await user.create(on: app.db)
+            return .created(.init(body: .json(user.response)))
+        } catch is DatabaseError {
+            return .conflict
+        }
+    }
+
+    func getUser(_ input: Operations.GetUser.Input) async throws
+        -> Operations.GetUser.Output
+    {
+        guard let user = try await User.from(app.db, name: input.query.name)
+        else {
+            return .notFound
+        }
+        return .ok(.init(body: .json(user.response)))
+    }
+
+    func getUsers(_: Operations.GetUsers.Input) async throws
+        -> Operations.GetUsers.Output
+    {
+        try await .ok(.init(
+            body: .json(User.query(on: app.db).all().map(\.response))))
+    }
+
     func postNotableQuery(_ input: Operations.PostNotableQuery.Input) async throws
         -> Operations.PostNotableQuery.Output
     {
@@ -27,18 +63,5 @@ struct ServiceHandler: APIProtocol {
             print(q.results.joined(separator: ", "))
         }
         return .accepted
-    }
-
-    func getYo(_: Operations.GetYo.Input) async throws
-        -> Operations.GetYo.Output
-    {
-        // this is: Components.Schemas.Yo(message: "Yo!")
-        .ok(.init(body: .json(.init(message: "Yo!"))))
-    }
-
-    func getHello(_: Operations.GetHello.Input) async throws
-        -> Operations.GetHello.Output
-    {
-        .ok(.init(body: .json(.init(message: "hello, world"))))
     }
 }
